--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.6.2",
   "main": "src/SIP.js",
   "browser": {
-    "promiscuous": "./src/polyfills/promiscuous.js",
+    "promise": false,
     "console": "./src/polyfills/console.js"
   },
   "homepage": "http://sipjs.com",
@@ -49,6 +49,6 @@
     "test": "grunt travis --verbose"
   },
   "optionalDependencies": {
-    "promiscuous": "^0.6.0"
+    "promise": "^6.0.0"
   }
 }
