--- a/package.json
+++ b/package.json
@@ -29,17 +29,17 @@
   "devDependencies": {
     "grunt": "~0.4.0",
     "grunt-cli": "~0.1.6",
+    "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-jasmine": "~0.8.0",
     "grunt-contrib-jshint": ">0.5.0",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-peg": "~1.3.1",
     "grunt-trimtrailingspaces": "^0.4.0",
+    "grunt-webpack": "^1.0.8",
+    "json-loader": "^0.5.1",
     "node-minify": "~0.7.2",
     "pegjs": "0.8.0",
-    "sdp-transform": "~0.4.0",
-    "grunt-contrib-copy": "^0.5.0",
-    "browserify": "^4.1.8",
-    "grunt-browserify": "^2.1.0"
+    "sdp-transform": "~0.4.0"
   },
   "engines": {
     "node": ">=0.8"
