--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.6.2",
   "main": "src/SIP.js",
   "browser": {
+    "./src/Grammar/index.js": "./src/Grammar/dist/Grammar.js",
     "promiscuous": "./src/polyfills/promiscuous.js",
     "console": "./src/polyfills/console.js"
   },
