--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "grunt-peg": "~1.3.1",
     "grunt-trimtrailingspaces": "^0.4.0",
     "node-minify": "~0.7.2",
-    "pegjs": "0.8.0",
     "sdp-transform": "~0.4.0",
     "grunt-contrib-copy": "^0.5.0",
     "browserify": "^4.1.8",
@@ -48,6 +47,9 @@
   "license": "MIT",
   "scripts": {
     "test": "grunt travis --verbose"
+  },
+  "dependencies": {
+    "pegjs": "0.8.0"
   },
   "optionalDependencies": {
     "promiscuous": "^0.6.0"
